2004-01-11  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstqueue.c: (gst_queue_init):
	  Use better defaults for when a queue should block. This
	  gets rid of jerky playback for quite a few files.
	  It takes more memory.

2004-01-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	(gst_xml_registry_parse_padtemplate):
          make critical message slightly more useful

2004-01-10  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstinfo.c: (gst_debug_log), (gst_debug_log_valist),
	(gst_debug_message_get), (gst_debug_log_default):
	* gst/gstinfo.h:
	  Change gst_debug_log(_valist) to take a const format string.
	  Change prototype of log function and functions using those to 
	  take a GstDebugMessage instead of a string that requires using
	  gst_debug_message_get.

2004-01-08  David Schleef  <ds@schleef.org>

	* Makefile.am:
	* configure.ac:
	Add option --enable-gcov to build GStreamer with -fprofile-arcs
	and -ftest-coverage, which allows gcov to show information about
	testsuite coverage.

2004-01-08  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstutils.h:
	  Add GST_BOILERPLATE(_FULL), GST_PARENT_CALL and
	  GST_PARENT_CALL_WITH_DEFAULT
	* gst/elements/gstaggregator.c: 
	* gst/elements/gstbufferstore.c: 
	* gst/elements/gstfakesink.c: 
	* gst/elements/gstfakesrc.c: 
	* gst/elements/gstfdsink.c: 
	* gst/elements/gstfdsrc.c: 
	* gst/elements/gstfilesink.c: 
	* gst/elements/gstfilesrc.c: 
	* gst/elements/gstidentity.c: 
	* gst/elements/gstmd5sink.c: 
	* gst/elements/gstmultidisksrc.c:
	* gst/elements/gstpipefilter.c: 
	* gst/elements/gstshaper.c:
	* gst/elements/gststatistics.c:
	* gst/elements/gsttee.c:
	* gst/elements/gsttypefindelement.c:
	  use them.

2004-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/gstreamer-docs.sgml: remove props
	* docs/gst/gstreamer-sections.txt: remove props
	* docs/gst/tmpl/gst.sgml:
	* docs/gst/tmpl/gstbin.sgml:
	* docs/gst/tmpl/gstbuffer.sgml: